# Hands-on

Agent/langchainFramework/: main.py  pyproject.toml
Agent/langchainFramework/section1/: 1-langchainintro.ipynb  2-tools.ipynb
LLM/: codebleuEval-codegen.py  codebleuEval-pythia.py  codebleuEval-starcoder2.py  codebleuEval.py  codegeneration.ipynb  eval.py  gen_tokens.txt  geneCode.py  gpt.ipynb  hudai.ipynb  modelsize.py  pred_tokens.txt  tokenizers.ipynb
NN/: MLP.ipynb  autograd.ipynb  derivativeIntro.ipynb
stat/: log-likelihood.ipynb
